# python-project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: CI-API.yaml
project-api/: .env.example  Dockerfile  Makefile  mkdocs.yml  pyproject.toml
project-api/docs/: about.md
project-api/src/app/: api.py
project-api/src/tests/: test_api.py
python-api/: pyproject.toml
