[project]
name = "project-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "podman-compose>=1.5.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
