[project]
name = "python-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "fastapi>=0.116.1",
    "mkdocs>=1.6.1",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
